# spinning_cube

./: .gitignore  CMakeLists.txt  README.md
docs/: notes.txt
include/: raygui.h
sources/: main.cpp
